# presence-tracker

./: .gitignore  .pre-commit-config.yaml  CHALLENGER_PLAN.md  CLAUDE.md  bank.schema.json  config.schema.json  justfile
.claude/rules/: go-style.md  python-style.md
docs/: ARCHITECTURE.md  CHALLENGES.md  CONFIG.md  ETHICS.md  EVENT_SCHEMA.md  GUI.md  QUERIES.md
go/: .gitignore  .golangci.yml  go.mod  go.sum  justfile
go/src/cmd/ptrack/: main.go
go/src/cmd/schemagen/: main.go
go/src/internal/challenger/: asr.go  asr_test.go  challenger.go  challenger_test.go  doc.go  llm.go  llm_test.go  producer.go  producer_test.go  prompts.go  reviewdir.go  reviewdir_test.go  reviewpath.go  reviewpath_test.go
go/src/internal/challenges/: bank.go  bank_schema.go  bank_test.go  challenge.go  doc.go  (+4 more)
py/: .gitignore  inspect_events.py  justfile  pyproject.toml
py/ptrack_analytics/: pyproject.toml
py/ptrack_analytics/src/ptrack_analytics/: __init__.py  analysis.py  frames.py  load.py  schema.py
py/ptrack_py/: pyproject.toml
py/ptrack_py/src/ptrack_py/: __main__.py  frames.py  rename.py  reports.py  stats.py
py/src/: ptrack_py_entry.py
py/src/ptrack_analytics/: __init__.py  __main__.py  analysis.py  frames.py  load.py  reports.py  schema.py  validate.py  views.py
py/src/ptrack_py/: __init__.py  __main__.py  _frames.py  _load.py  frames.py  rename.py  reports.py  stats.py  validate.py
py/tests/: test_analytics_frames.py  test_parity.py  test_ptrack_py_frames.py  test_reports.py
test/: config.json  mock.config.json
test/basic/: config.json
test/fixtures/: lesson1.jsonl
test/heavy/: expected.json  fixture.jsonl  gen.py
tests/basic/: expected.json  fixture.jsonl
(+111 files in other folders)
