[project]
name = "ptrack-analytics"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "polars[pyarrow]>=1.0",
    "typer>=0.12",
    "pyyaml>=6.0",
    "tzlocal>=5.3.1",
    "matplotlib>=3.10.9",
]

[project.scripts]
ptrack_py = "ptrack_py.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptrack_analytics", "src/ptrack_py"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]
