[project]
name = "ptrack-analytics"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "polars[pyarrow]>=1.0",
    "tzlocal>=5.3.1",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptrack_analytics"]
