[project]
name = "ptrack-py"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "ptrack-analytics",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.scripts]
ptrack_py = "ptrack_py.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ptrack_py"]

[tool.uv.sources]
ptrack-analytics = { workspace = true }

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
